# ezv2-t1

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ezv2-config.toml  log_config.txt.example
.claude/: 15d1cc60-d6e4-4aa2-8369-47a37b287875.jsonl  3a7c4b1a-145c-43c7-82e6-637b69ba8346.jsonl  47e14fa3-3ada-4d3b-b282-d37e3105af63.jsonl  5ba21773-4f2c-449a-a709-4752cd00f86d.jsonl  989362f0-ab98-4678-9219-65856cfb35d7.jsonl  agent-076a2c5c.jsonl  agent-07f02ca3.jsonl  agent-14556120.jsonl  agent-16c1d13c.jsonl  agent-203f3f11.jsonl  agent-38c6c5e4.jsonl  agent-4b3562b6.jsonl  agent-4f8c96ef.jsonl  agent-70082d65.jsonl  agent-82501410.jsonl  agent-82f87f17.jsonl  agent-9452f7b7.jsonl  agent-9f2e8304.jsonl  agent-d1e1e158.jsonl  agent-d63ecbfc.jsonl  agent-d9277766.jsonl  agent-df1c72e5.jsonl  d32bc20c-7a58-406d-ab2b-2924af2e0722.jsonl  e21c78a5-d347-4d36-b861-2b4a71ea8d0a.jsonl  e6421115-bc74-41ab-bda4-e462c9f2f328.jsonl
crates/collector/: Cargo.toml
crates/collector/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs
src/: main.rs
