[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
database = { path = "../database" }
notify = "6.1"
rumqttc = "0.25.1"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
